k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messenger-ingress
  annotations:
    # --- ADDED: Keep WebSockets alive for 1 hour ---
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "chat-service"
spec:
  ingressClassName: nginx
  rules:
    # ==========================================
    # 1. API GATEWAY (Your Java Apps)
    # ==========================================
    - host: messenger.local
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - path: /api/chats
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8081
          - path: /api/messages
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8081
          - path: /ws-chat
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  number: 8081

    # ==========================================
    # 2. GRAFANA UI
    # ==========================================
    - host: grafana.messenger.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000

    # ==========================================
    # 3. JAEGER UI (Tracing)
    # ==========================================
    - host: tracing.messenger.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zipkin-service
                port:
                  number: 16686
